# qiskit-aer

./: CMakeLists.txt  CONTRIBUTING.md  azure-pipelines.yml  requirements-dev.txt  setup.py
cmake/: conan_utils.cmake
qiskit/providers/aer/backends/wrappers/: CMakeLists.txt
qiskit/providers/aer/pulse/controllers/: mc_controller.py  pulse_controller.py  unitary_controller.py
qiskit/providers/aer/pulse/de_solvers/: pulse_de_solver.py
qiskit/providers/aer/pulse/system_models/: hamiltonian_model.py
qiskit/providers/aer/pulse_new/de/: DE_Problems.py  DE_Solvers.py
qiskit/providers/aer/pulse_new/models/: frame.py  operator_models.py
src/controllers/: controller_execute.hpp
src/framework/: matrix.hpp
src/framework/linalg/: almost_equal.hpp  eigen_psd.hpp
src/ode/sundials_wrapper/: sundials_complex_vector.hpp  sundials_cvode_wrapper.hpp
src/open_pulse/: numeric_integrator.cpp  numeric_integrator.hpp  pulse_utils_bindings.cpp  sundials_numpy.hpp  test_python_to_cpp.cpp
src/simulators/matrix_product_state/: matrix_product_state.hpp
src/simulators/statevector/: qubitvector.hpp  transformer.hpp  transformer_avx2.hpp
src/simulators/superoperator/: superoperator_state.hpp
temp_notebooks/: BMDE_Problem_and_Solver.ipynb
test/: CMakeLists.txt
test/terra/: test_python_to_cpp.py
test/terra/backends/: test_pulse_simulator.py
test/terra/pulse/: test_duffing_model_generators.py  test_system_models.py
test/terra/pulse_new/de/: test_de_problems.py  test_de_solvers.py
test/terra/pulse_new/models/: test_frame.py  test_operator_models.py
